fix broken css that causes error

--- a/theme.css
+++ b/theme.css
@@ -290,12 +290,12 @@ code[class*="language-"], pre[class*="language-"] {
 	color: #979db4;
 }
 
-pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection, code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
+pre[class*="language-"]::-moz-selection, code[class*="language-"]::-moz-selection {
 	text-shadow: none;
 	background: #898ea4;
 }
 
-pre[class*="language-"]::selection, pre[class*="language-"] ::selection, code[class*="language-"]::selection, code[class*="language-"] ::selection {
+pre[class*="language-"]::selection, code[class*="language-"]::selection {
 	text-shadow: none;
 	background: #898ea4;
 }
